# ByteMeSumAI

./: README.md  mkdocs.yml  pyproject.toml  setup.py
bytemesumai/: CHANGELOG.md  __init__.py
bytemesumai/chunking/: __init__.py  models.py  processor.py
bytemesumai/evaluation/: metrics.py
bytemesumai/loaders/: __init__.py
bytemesumai/models/: document.py
bytemesumai/processing/: document.py
bytemesumai/reporting/: markdown.py
bytemesumai/summarization/: __init__.py  processor.py
bytemesumai/utils/: __init__.py
docs/: README.md  index.md  installation.md  quickstart.md
examples/: README.md  advanced_summarization_example.py  basic_document_processing.py  earnings_call_analysis.py  simple_earnings_call_analysis.py
examples/data/: DELL_EarningsCall.txt  Dell_Q4_2024_EarningsCall.txt  README.md
output/: DELL_EarningsCall_analysis.txt  Dell_Q4_2024_EarningsCall_analysis.txt  hierarchical_summary.md  index.md  multi_strategy_comparison.md
sumwiseai/: __init__.py
sumwiseai/chunking/: models.py  processor.py
sumwiseai/llm/: client.py
sumwiseai/models/: __init__.py  document.py
sumwiseai/processing/: __init__.py  document.py
sumwiseai/reporting/: __init__.py  markdown.py
sumwiseai/summarization/: __init__.py  processor.py
tests/: verification.py
